--- a/TutoriasJava/pom.xml
+++ b/TutoriasJava/pom.xml
@@ -22,8 +22,14 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-
-
+        
+        <!-- https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.21</version>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
