--- a/TutoriasJava/pom.xml
+++ b/TutoriasJava/pom.xml
@@ -11,6 +11,11 @@
 
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.5.6</version>
