--- a/TutoriasJava/pom.xml
+++ b/TutoriasJava/pom.xml
@@ -8,6 +8,12 @@
     <name>TutoriasJava Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+        
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.2</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
