--- a/TutoriasJava/src/main/webapp/WEB-INF/web.xml
+++ b/TutoriasJava/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,111 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+         http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+
   <display-name>Archetype Created Web Application</display-name>
 
+  <servlet>
+    <servlet-name>AlumnoDetallesServlet</servlet-name>
+    <servlet-class>Controlador.AlumnoDetallesServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AlumnoDetallesServlet</servlet-name>
+    <url-pattern>/AlumnoDetallesServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>AlumnoNotasServlet</servlet-name>
+    <servlet-class>Controlador.AlumnoNotasServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AlumnoNotasServlet</servlet-name>
+    <url-pattern>/AlumnoNotasServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>AlumnoTutoriasServlet</servlet-name>
+    <servlet-class>Controlador.AlumnoTutoriasServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AlumnoTutoriasServlet</servlet-name>
+    <url-pattern>/AlumnoTutoriasServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>HistorialServlet</servlet-name>
+    <servlet-class>Controlador.GeneratePDFServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HistorialServlet</servlet-name>
+    <url-pattern>/HistorialServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>RegistrarNotaServlet</servlet-name>
+    <servlet-class>Controlador.RegistrarNotaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RegistrarNotaServlet</servlet-name>
+    <url-pattern>/RegistrarNotaServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>RegistrarTutoriaServlet</servlet-name>
+    <servlet-class>Controlador.RegistrarTutoriaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RegistrarTutoriaServlet</servlet-name>
+    <url-pattern>/RegistrarTutoriaServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>svCloseSession</servlet-name>
+    <servlet-class>Controlador.svCloseSession</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>svCloseSession</servlet-name>
+    <url-pattern>/svCloseSession</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>svLogin</servlet-name>
+    <servlet-class>Controlador.svLogin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>svLogin</servlet-name>
+    <url-pattern>/svLogin</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>svNuevoMensaje</servlet-name>
+    <servlet-class>Controlador.svNuevoMensaje</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>svNuevoMensaje</servlet-name>
+    <url-pattern>/svNuevoMensaje</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>svNuevoMensajeTutor</servlet-name>
+    <servlet-class>Controlador.svNuevoMensajeTutor</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>svNuevoMensajeTutor</servlet-name>
+    <url-pattern>/svNuevoMensajeTutor</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>svRegistro</servlet-name>
+    <servlet-class>Controlador.svRegistro</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>svRegistro</servlet-name>
+    <url-pattern>/svRegistro</url-pattern>
+  </servlet-mapping>
 
 </web-app>
